--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,8 +1,15 @@
-$body-color: #3d3d3d;
-$language-disable-color: #b9b9b9;
-$navbar-active-color: #cfcfcf;
-// $navbar-dropdown-backgrpund: #005da4;
-$navbar-dropdown-backgrpund: #0661a6;
 $hero-bottom: #909090;
-$info-color: #f8f8f8;
-$info-background: #5f686f;
+$article-width: 348px;
+
+$color-1: #393939;
+$color-2: #525252;
+$color-3: #fff;
+$color-4: #cfcfcf;
+$color-5: #f8f8f8;
+$color-6: #d4d2d2;
+
+$background-1: #0661a6;
+$background-2: #efefef;
+$background-3: #5f686f;
+$background-4: #cacaca;
+$background-5: #58646d;
