--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,9 +1,19 @@
+// @import './w3';
 @import './variables';
 @import './bootstrap-reboot';
 @import './container';
-@import './root';
 @import './utility';
-@import './navbar';
-@import './hero';
-@import './main';
-@import './_info';
+
+@import './layout/navbar';
+@import './layout/hero';
+@import './layout/footer';
+
+@import './home/section-1';
+@import './home/section-2';
+@import './home/section-3';
+@import './home/section-4';
+@import './home/section-5';
+
+@import './global';
+
+@import './debug';
