--- a/sass/layout/_navbar.scss
+++ b/sass/layout/_navbar.scss
@@ -1,58 +1,92 @@
-nav {
+$itemBg: #2c8fb5;
+
+$menu1AnimSpeed: 300ms;
+$menu2AnimSpeed: 175ms;
+$menu3AnimSpeed: 200ms;
+$menu4AnimSpeed: 300ms;
+$menu5AnimSpeed: 300ms;
+
+.nav {
     position: relative;
-    // display: flex;
-    // padding-top: 40px;
-    // height: 100px;
     font-size: 18px;
     text-align: right;
-    // justify-content: flex-end;
-    // align-items: center;
-    // border: 1px solid black;
     color: inherit;
 
-    ul {
-        margin: 55px 0 20px 0;
-        padding: 0;
-        // margin-left: auto;
-        // margin-right: auto;
+    .nav__menu-lists {
+        margin-top: 40px;
         list-style: none;
         display: inline-flex;
     }
 
-    a {
-        // background: #ffaaaa;
-
-        // display: inline-block;
-        // height: 20px;
-        // margin-left: 20px;
-        // margin-top: 50px;
-        // margin-bottom: 10px;
-        padding: 10px 0px;
+    .nav__menu-items {
+        position: relative;
+        display: block;
+        padding: 20px 0px;
         margin-left: 25px;
 
-        // font-size: 17px;
-        // border-bottom: 10px solid transparent;
         &.active {
-            border-bottom: 10px solid $color-4;
+            // border-bottom: 10px solid $color-4;
+            &::before {
+                position: absolute;
+                content: '';
+                top: 0;
+                left: 0;
+                height: 100%;
+                width: 100%;
+                border-bottom: 10px solid $color-4;
+            }
+        }
+
+        &::after {
+            position: absolute;
+            content: '';
+            bottom: 0;
+            left: 50%;
+            height: 10px;
+            width: 100%;
+            opacity: 0;
+            background: $color-4;
+            // background: red;
+            transform: translate(-50%, 0) scaleX(0);
+            transition: all 0.3s ease-in-out;
+        }
+
+        &:hover:not(.active):after {
+            transform: translate(-50%, 0) scaleX(1);
+            opacity: 1;
+        }
+
+        &:hover .nav__submenu--list {
+            display: block;
+        }
+
+        // Submenu 1
+        @for $i from 1 through 6 {
+            &:hover > .nav__submenu--1-list div:nth-child(#{$i}) {
+                animation: menu-animation ease-in-out forwards;
+                animation-duration: $menu1AnimSpeed;
+                animation-delay: ($menu5AnimSpeed / 2) * ($i - 1);
+            }
         }
     }
 
-    .logo {
-        // margin: 15px 0;
-        // display: inline-block;
-        // margin: 15px 0;
+    .nav__submenu--list {
+        display: none;
+        // opacity: 0;
+        & > .nav_submenu-items {
+            margin: 10px 0;
+            opacity: 0;
+        }
+    }
+
+    .nav__logo {
         position: absolute;
         top: 50%;
         left: 15px;
         transform: translateY(-50%);
-        // float: left;
-        // margin-right: auto;
-        // text-align: center;
-        // padding: 8px 0;
-        // font-size: 28px;
     }
 
-    .language {
+    .nav__language {
         position: absolute;
         top: 10px;
         right: 15px;
@@ -64,22 +98,15 @@ nav {
             color: #3d3d3d;
         }
     }
+}
 
-    .navbar-item {
-        // display: inline-block;
-        // margin-left: 20px;
-        // padding: 10px 5px;
-        // color: inherit;
-        // text-decoration: none;
-        // font-size: 17px;
-
-        // &:hover {
-        //     color: inherit;
-        //     text-decoration: none;
-        // }
-
-        // &.active {
-        //     border-bottom: 10px solid $color-4;
-        // }
+@keyframes menu-animation {
+    from {
+        opacity: 0;
+        transform: rotateX(-180deg);
+    }
+    to {
+        opacity: 1;
+        transform: rotateX(0deg);
     }
 }
