--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,6 +7,7 @@
 @import './layout/navbar';
 @import './layout/hero';
 @import './layout/footer';
+@import './layout/media';
 
 @import './home/section-1';
 @import './home/section-2';
