--- a/sass/_utility.scss
+++ b/sass/_utility.scss
@@ -10,12 +10,20 @@
     transform: rotate(-45deg);
 }
 
+/******************************************************************
+ * Display
+ ******************************************************************/
+
 .p-relative {
     position: relative;
 }
 
 .d-blok {
     display: block;
+}
+
+.d-inl-blok {
+    display: inline-block;
 }
 
 .d-flex {
@@ -39,34 +47,111 @@
     justify-content: space-between;
 }
 
+/******************************************************************
+ * Heights
+ ******************************************************************/
+
+.h-100 {
+    height: 100%;
+}
+
+/******************************************************************
+ * Widths
+ ******************************************************************/
+
+// .w-30 {
+//     width: 33.33333%;
+// }
+// .w-50 {
+//     width: 49.99999%;
+// }
+// .w-100 {
+//     width: 100%;
+// }
+
+// .center {
+//     margin-left: auto;
+//     margin-right: auto;
+// }
+
+/******************************************************************
+ * Paddings
+ ******************************************************************/
+
+.container-p20 {
+    padding: 0 20px;
+}
+
+.container-p40 {
+    padding: 0 40px;
+}
+
+/******************************************************************
+ * Margins
+ ******************************************************************/
+
 .m-t-10 {
     margin-top: 10px;
+}
+
+.m-t-15 {
+    margin-top: 15px;
 }
 
 .m-t-20 {
     margin-top: 20px;
 }
 
-.m-t-30 {
-    margin-top: 30px;
-}
+// .m-t-30 {
+//     margin-top: 30px;
+// }
 
 .m-t-40 {
     margin-top: 40px;
 }
 
-.w-30 {
-    width: 33.33333%;
-}
-.w-50 {
-    width: 49.99999%;
-}
-.w-100 {
-    width: 100%;
+// .m-t-45 {
+//     margin-top: 40px;
+// }
+
+.m-b-0 {
+    margin-bottom: 0;
 }
 
+// .m-b-20 {
+//     margin-bottom: 20px;
+// }
+
+.m-b-30 {
+    margin-bottom: 30px;
+}
+
+.m-left-5 {
+    margin-left: 5px;
+}
+
+.panel-m15 {
+    // margin-top: 16px;
+    // margin-bottom: 16px;
+    margin: 15px 0;
+}
+
+.panel-m20 {
+    // margin-top: 16px;
+    // margin-bottom: 16px;
+    margin: 20px 0;
+}
+
+// .panel-m40 {
+//     margin: 40px 0;
+// }
+
+/******************************************************************
+ * Images
+ ******************************************************************/
+
 .img-flex {
-    max-width: auto;
+    height: auto;
     width: 100%;
 }
 
@@ -76,7 +161,46 @@
     background-size: cover;
 }
 
-.center {
-    margin-left: auto;
-    margin-right: auto;
+/******************************************************************
+ * Shadows
+ ******************************************************************/
+
+.w3-card,
+.w3-card-2 {
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+}
+
+.w3-card-4,
+.w3-hover-shadow:hover {
+    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2), 0 4px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+// .w3-card-6,
+// .w3-hover-shadow:hover {
+//     box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2), 0 4px 20px 0 rgba(0, 0, 0, 0.19);
+//     box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.4), 0 4px 20px 0 rgba(0, 0, 0, 0.4);
+// }
+
+/******************************************************************
+ * Colors
+ ******************************************************************/
+
+.color-inherit {
+    color: inherit;
+}
+
+/******************************************************************
+ * Fonts
+ ******************************************************************/
+
+.f-16 {
+    font-size: 16px;
+}
+
+.f-18 {
+    font-size: 18px;
+}
+
+.f-20 {
+    font-size: 20px;
 }
