--- a/sass/home/_section-1.scss
+++ b/sass/home/_section-1.scss
@@ -1,13 +1,11 @@
 .home-section-1 {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    h1 {
-        margin-top: 45px;
-    }
+    // @include img-flex;
+    // h1 {
+    //     margin-top: 40px;
+    // }
     article {
         background: $background-2;
-    }
-    article > * {
-        padding: 0 40px;
     }
 }
