--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,6 +3,7 @@
 @import './bootstrap-reboot';
 @import './container';
 @import './utility';
+@import './mixin';
 
 @import './layout/navbar';
 @import './layout/hero';
@@ -17,4 +18,4 @@
 
 @import './global';
 
-@import './debug';
+// @import './debug';
