--- a/sass/home/_section-5 copy.scss
+++ b/sass/home/_section-5 copy.scss
@@ -15,7 +15,7 @@
             height: 100%;
             max-width: 40%;
             color: $color-5;
-            background: $background-1;
+            background: $primary-back;
             opacity: 0.95;
         }
         h1 {
