--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -2,12 +2,17 @@ body {
     // max-width: 1600px;
     // margin-right: auto;
     // margin-left: auto;
+    padding-top: $nav-height;
 
-    color: $color-1;
     line-height: 1.2;
+    line-height: 1.5;
     font-weight: 400;
 
-    font-family: 'Open Sans', sans-serif;
+    // text-align: center;
+    color: $color-1;
+
+    // font-family: 'Open Sans', sans-serif;
+    font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -20,34 +25,60 @@ a:hover {
 }
 
 // article {
-//     background: $background-2;
+//     background: $secondary-back;
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-weight: 300;
+    font-size: 16px;
+}
+p {
+    // margin: 0;
+    // padding: 0;
+    font-size: 16px;
+    // font-weight: 300;
+}
+
 h1 {
-    // margin-bottom: 25px;
-    font-size: 30px;
-    font-weight: 700;
     text-transform: uppercase;
 }
 
-h2 {
-    // margin-bottom: 15px;
-    font-size: 26px;
-    font-weight: 700;
-    text-transform: uppercase;
-}
+// h1 {
+//     // margin-bottom: 25px;
+//     // font-size: 30px;
+//     // font-weight: 700;
+//     font-size: 35px;
+//     // text-transform: uppercase;
+// }
 
-h3 {
-    // padding: 0 20px;
-    font-size: 20px;
-    font-weight: 400;
-    color: $color-3;
-    background: $background-1;
-}
+// h2 {
+//     font-size: 30px;
+//     // margin-bottom: 15px;
+//     // font-weight: 700;
+// }
+
+// h3 {
+//     font-size: 26px;
+//     // padding: 0 20px;
+//     // font-size: 20px;
+//     // font-weight: 400;
+//     // color: $color-3;
+//     // background: $primary-back;
+// }
+
+// h4 {
+//     font-size: 18px;
+// }
 
 p {
-    font-size: 20px;
-    font-weight: 400;
+    // font-weight: 400;
     color: $color-2;
 }
+
 // }
 
 // pre {
@@ -58,19 +89,19 @@ p {
 //     overflow: hidden;
 // }
 
-button {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    padding: 5px 40px;
-    font-size: 16px;
-    font-weight: 400;
-    color: #fff;
-    background: $background-1;
-    border: none;
-}
-
 // img {
 //     height: auto;
 //     width: 100%;
 // }
+
+.post-title {
+    margin: 0;
+    padding-top: 5px;
+    padding-bottom: 5px;
+
+    font-size: 16px;
+    font-weight: 600;
+
+    color: $color-3;
+    background: $primary-back;
+}
