--- a/sass/home/_section-1.scss
+++ b/sass/home/_section-1.scss
@@ -1,11 +1,12 @@
-.home-section-1 {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    // @include img-flex;
-    // h1 {
-    //     margin-top: 40px;
-    // }
-    article {
-        background: $background-2;
+.section-1 {
+    text-align: center;
+
+    .post-big {
+        margin-left: -15px;
+        margin-right: -15px;
+        display: grid;
+        grid-template-columns: 1fr;
+        // @include img-flex;
+        background: $secondary-back;
     }
 }
