--- a/sass/home/_section-3.scss
+++ b/sass/home/_section-3.scss
@@ -1,18 +1,29 @@
-.home-section-3 {
-    color: $color-5;
+.section-3 {
+    text-align: center;
+    // padding: 10px 0;
+    // padding-top: 32px;
+    // padding-bottom: 16px;
+
     background: $background-5;
-    .container {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-column-gap: 20px;
+    .d-grid {
+        // display: grid;
+        // grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr;
+        grid-gap: 30px;
     }
-    h1 {
-        font-weight: 400;
-        font-size: 22px;
-    }
-    h2 {
-        font-weight: 400;
-        font-size: 18px;
-        text-transform: none;
+    .post-info {
+        color: $color-5;
+
+        h1 {
+            margin-left: 10px;
+            font-weight: 400;
+        }
+        h2 {
+            font-weight: 400;
+        }
+        img {
+            height: 35px;
+            width: 40px;
+        }
     }
 }
