--- a/sass/home/_section-4.scss
+++ b/sass/home/_section-4.scss
@@ -1,8 +1,27 @@
-.home-section-4 {
-    display: grid;
-    grid-template-columns: 1fr auto;
-    article {
-        background: $background-4;
-        position: relative;
+.section-4 {
+    text-align: center;
+    .d-grid {
+        margin-left: -15px;
+        margin-right: -15px;
+        grid-template-columns: 1fr;
+        grid-template-areas:
+            'image'
+            'article';
+
+        background: $secondary-back;
+    }
+    .d-grid-1 {
+        min-width: 350px;
+        grid-area: article;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr auto;
+        align-items: center;
+    }
+    img {
+        grid-area: image;
+    }
+    .btn-container {
+        margin-bottom: 20px;
     }
 }
