--- a/sass/home/_section-5.scss
+++ b/sass/home/_section-5.scss
@@ -1,16 +1,25 @@
-.home-section-5 {
-    height: 500px;
-    .container {
-        article {
-            position: relative;
-            margin-left: auto;
-            max-width: 40%;
-            color: $color-5;
-            background: $background-1;
-            opacity: 0.95;
-        }
-        button {
-            background: #3f749a;
-        }
+.section-5 {
+    height: 400px;
+    text-align: center;
+    .d-grid {
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 450px;
+        grid-template-columns: 1fr;
+        grid-template-rows: 4fr auto;
+        align-items: center;
+        text-align: center;
+        color: $color-5;
+        background: $primary-back;
+        opacity: 0.95;
+    }
+    .btn-container {
+        margin-bottom: 40px;
+        // align-self: flex-start;
+        // text-align: right;
+        // display: inline-block;
+        // margin-right: -20px;
+        // margin-bottom: -20px;
+        // margin-top: -20px;
     }
 }
