--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,5 +1,5 @@
 footer {
-    padding: 40px 0;
+    padding: 30px 0;
     background: $background-5;
     img {
         margin-right: 10px;
@@ -7,12 +7,14 @@ footer {
     }
     p {
         color: $color-6;
-        font-size: 18px;
         font-weight: 400;
     }
-    .container {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr) auto;
+    .d-grid {
+        // display: grid;
+        // grid-template-columns: repeat(3, 1fr) auto;
+        grid-template-columns: 1fr;
         align-items: center;
+        grid-gap: 10px;
+        grid-gap: 20px;
     }
 }
