--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,17 +1,14 @@
 .hero {
-    // display: flex;
-
-    // padding: 0;
-    // margin: 0;
-    // max-width: 100%;
-
     height: 500px;
+    width: 100%;
 
-    border-top: 4px solid $background-1;
+    overflow: hidden;
+
+    border-top: 4px solid $primary-back;
     border-bottom: 4px solid $hero-bottom;
 
     // img {
-    //     border-top: 4px solid $background-1;
+    //     border-top: 4px solid $primary-back;
     //     border-bottom: 4px solid $hero-bottom;
     //     // max-height: 500px;
     // }
