--- a/sass/layout/_media.scss
+++ b/sass/layout/_media.scss
@@ -1,21 +1,17 @@
-@media (min-width: 768px) {
-    // show hamburger
-}
+// @media (min-width: 768px) {
+//     // show hamburger
+// }
 
 @media (min-width: 992px) {
-    nav {
-        font-size: 16px;
-        .nav__menu-items {
-            margin-left: 16px;
+    .navbar {
+        .hamburger {
+            display: none;
+        }
+        .menu-lists {
+            display: flex;
         }
     }
 }
 
-@media (min-width: 1200px) {
-    nav {
-        font-size: 18px;
-        .nav__menu-items {
-            margin-left: 25px;
-        }
-    }
-}
+// @media (min-width: 1200px) {
+// }
