--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,5 +1,10 @@
 $hero-bottom: #909090;
-$article-width: 348px;
+// $article-width: 348px;
+
+$header-1: #373a3c;
+// $header-1: #373a3c;
+$content-1: #666666;
+$footer-1: #d4d2d2;
 
 $color-1: #393939;
 $color-2: #525252;
