--- a/sass/home/_section-4.scss
+++ b/sass/home/_section-4.scss
@@ -1,27 +1,32 @@
 .section-4 {
+    // height: 400px;
     text-align: center;
     .d-grid {
         margin-left: -15px;
         margin-right: -15px;
         grid-template-columns: 1fr;
+        grid-template-rows: auto 1fr;
         grid-template-areas:
             'image'
             'article';
-
-        background: $secondary-back;
-    }
-    .d-grid-1 {
-        min-width: 350px;
-        grid-area: article;
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr auto;
         align-items: center;
+
+        background: rgb(131, 255, 255);
     }
-    img {
+    .item-1 {
         grid-area: image;
     }
-    .btn-container {
-        margin-bottom: 20px;
+    .item-2 {
+        // min-width: 350px;
+        grid-area: article;
+        background: $secondary-back;
+
+        // display: grid;
+        // grid-template-columns: 1fr;
+        // grid-template-rows: 1fr 1fr 1fr;
+        // align-items: center;
     }
+    // .btn-container {
+    //     margin-bottom: 20px;
+    // }
 }
