--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -12,9 +12,16 @@ footer {
     .d-grid {
         // display: grid;
         // grid-template-columns: repeat(3, 1fr) auto;
-        grid-template-columns: 1fr;
+        grid-template-columns: 1fr auto;
+        grid-auto-rows: auto;
         align-items: center;
         grid-gap: 10px;
         grid-gap: 20px;
+    }
+    .item-1 {
+        grid-column: 1 / span 2;
+    }
+    .item-2 {
+        grid-column: 1 / span 2;
     }
 }
