--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -4,15 +4,17 @@ body {
     // margin-left: auto;
     padding-top: $nav-height;
 
-    line-height: 1.2;
-    line-height: 1.5;
-    font-weight: 400;
+    // line-height: 1.2;
+    // line-height: 1.5;
+    // font-weight: 400;
 
     // text-align: center;
     color: $color-1;
 
     // font-family: 'Open Sans', sans-serif;
-    font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    // font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: 'Open Sans', sans-serif;
+    // font-family: 'Lato', sans-serif;
 
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -32,54 +34,19 @@ h2,
 h3,
 h4,
 h5,
-h6 {
-    font-weight: 300;
-    font-size: 16px;
+h6,
+p,
+span {
+    color: inherit;
+    font-weight: inherit;
+    font-size: inherit;
+    // font-size: 16px;
 }
-p {
-    // margin: 0;
-    // padding: 0;
-    font-size: 16px;
-    // font-weight: 300;
-}
-
-h1 {
-    text-transform: uppercase;
-}
-
-// h1 {
-//     // margin-bottom: 25px;
-//     // font-size: 30px;
-//     // font-weight: 700;
-//     font-size: 35px;
-//     // text-transform: uppercase;
-// }
-
-// h2 {
-//     font-size: 30px;
-//     // margin-bottom: 15px;
-//     // font-weight: 700;
-// }
-
-// h3 {
-//     font-size: 26px;
-//     // padding: 0 20px;
-//     // font-size: 20px;
-//     // font-weight: 400;
-//     // color: $color-3;
-//     // background: $primary-back;
-// }
-
-// h4 {
-//     font-size: 18px;
-// }
 
 p {
     // font-weight: 400;
-    color: $color-2;
+    // color: $color-2;
 }
-
-// }
 
 // pre {
 //     font-family: inherit;
