--- a/sass/home/_section-3.scss
+++ b/sass/home/_section-3.scss
@@ -11,19 +11,23 @@
         grid-template-columns: 1fr;
         grid-gap: 30px;
     }
-    .post-info {
-        color: $color-5;
-
-        h1 {
-            margin-left: 10px;
-            font-weight: 400;
-        }
-        h2 {
-            font-weight: 400;
-        }
-        img {
-            height: 35px;
-            width: 40px;
-        }
+    // .post-info {
+    //     color: $color-5;
+    // }
+    // h1,
+    // h2 {
+    //     font-weight: 400;
+    // }
+    h1 {
+        margin: 0 0 0 10px;
+        display: inline-block;
+        vertical-align: middle;
+    }
+    img {
+        height: 35px;
+        width: 40px;
+    }
+    span {
+        display: block;
     }
 }
