--- a/sass/layout/_navbar.scss
+++ b/sass/layout/_navbar.scss
@@ -147,6 +147,7 @@ nav {
         @include text-center(35px);
         color: $color-3;
         background: $primary-back;
+        transition: background 0.3s ease 0s;
 
         &:hover {
             background: $primary-back-lighter-10;
@@ -162,5 +163,18 @@ nav {
     to {
         opacity: 1;
         transform: rotateX(0deg);
+    }
+}
+
+.navbar-scroll {
+    height: 60px;
+    .language {
+        display: none;
+    }
+    .logo > img {
+        width: 60%;
+    }
+    .hamburger {
+        margin-bottom: 14px;
     }
 }
