--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,5 +1,7 @@
 $hero-bottom: #909090;
 // $article-width: 348px;
+$banner-height: 500px;
+$banner-height-small: 400px;
 
 $header-1: #373a3c;
 // $header-1: #373a3c;
