--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -61,6 +61,11 @@ p {
 //     width: 100%;
 // }
 
+.banner {
+    min-height: 250px;
+    max-height: 500px;
+}
+
 .post-title {
     margin: 0;
     padding-top: 5px;
