--- a/sass/home/_section-5.scss
+++ b/sass/home/_section-5.scss
@@ -1,16 +1,21 @@
 .section-5 {
-    height: 400px;
     text-align: center;
-    .d-grid {
-        margin-left: auto;
-        margin-right: auto;
-        max-width: 450px;
-        grid-template-columns: 1fr;
-        grid-template-rows: 4fr auto;
-        align-items: center;
-        color: $color-5;
+
+    .item-2 {
+        //     margin-left: auto;
+        //     margin-right: auto;
+        //     max-width: 450px;
+        //     display: grid;
+        //     grid-template-columns: 1fr;
+        //     grid-template-rows: 4fr auto;
+        //     align-items: center;
+        //     color: $color-5;
         background: $primary-back;
-        opacity: 0.95;
+        //     opacity: 0.95;
+    }
+
+    picture {
+        height: $banner-height-small;
     }
     //.btn-container {
     //margin-bottom: 40px;
