--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,8 +1,8 @@
 .hero {
-    height: 500px;
-    width: 100%;
+    // max-height: 500px;
+    // width: 100%;
 
-    overflow: hidden;
+    // overflow: hidden;
 
     border-top: 4px solid $primary-back;
     border-bottom: 4px solid $hero-bottom;
