--- a/sass/home/_section-4.scss
+++ b/sass/home/_section-4.scss
@@ -1,32 +1,17 @@
 .section-4 {
     // height: 400px;
+    padding: 0;
     text-align: center;
-    .d-grid {
-        margin-left: -15px;
-        margin-right: -15px;
-        grid-template-columns: 1fr;
-        grid-template-rows: auto 1fr;
-        grid-template-areas:
-            'image'
-            'article';
-        align-items: center;
 
-        background: rgb(131, 255, 255);
-    }
-    .item-1 {
-        grid-area: image;
-    }
-    .item-2 {
-        // min-width: 350px;
-        grid-area: article;
+    .d-grid {
+        // margin-left: -15px;
+        // margin-right: -15px;
+        grid-template-columns: 1fr;
         background: $secondary-back;
 
-        // display: grid;
-        // grid-template-columns: 1fr;
-        // grid-template-rows: 1fr 1fr 1fr;
-        // align-items: center;
+        // align-items: center; // must remove for image cover
     }
-    // .btn-container {
-    //     margin-bottom: 20px;
-    // }
+    .item-2 {
+        position: relative;
+    }
 }
