--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,10 +1,10 @@
 // @import './w3';
-@import './variables';
 @import './bootstrap-reboot';
-// @import './container';
-// @import './utility';
 @import './freamwork/freamwork';
+// @import './utility';
+@import './variables';
 @import './mixin';
+@import './font';
 
 $hamburger-padding-x: 0;
 $hamburger-padding-y: 0;
@@ -15,7 +15,6 @@ $hamburger-layer-color: $color-1;
 @import './hamburgers/_hamburgers.scss';
 
 @import './layout/navbar';
-
 @import './layout/hero';
 @import './layout/footer';
 @import './layout/media';
@@ -25,10 +24,11 @@ $hamburger-layer-color: $color-1;
 @import './home/section-3';
 @import './home/section-4';
 @import './home/section-5';
-@import './home/media';
-
-@import './buttons';
-@import './font';
-@import './global';
 
 // @import './debug';
+
+@import './global';
+@import './buttons';
+
+// Media
+@import './home/media';
