--- a/sass/home/_section-1.scss
+++ b/sass/home/_section-1.scss
@@ -1,9 +1,9 @@
 .section-1 {
-    width: 100%;
-    text-align: center;
+    // width: 100%;
+    // text-align: center;
 
     .d-grid {
-        display: grid;
+        // display: grid;
         grid-template-columns: 1fr;
         background: $secondary-back;
     }
