--- a/sass/home/_section-2.scss
+++ b/sass/home/_section-2.scss
@@ -1,13 +1,13 @@
 .section-2 {
-    text-align: center;
-    display: grid;
+    // text-align: center;
+    // display: grid;
     // grid-template-columns: minmax(100px, 400px);
     grid-template-columns: 1fr;
     justify-items: center;
     // grid-gap: 20px;
 
     .post {
-        max-width: 348px;
+        max-width: $post-max-width;
         background: $secondary-back;
     }
 }
