--- a/sass/home/_section-3.scss
+++ b/sass/home/_section-3.scss
@@ -1,10 +1,10 @@
 .section-3 {
-    text-align: center;
+    // text-align: center;
     // padding: 10px 0;
     // padding-top: 32px;
     // padding-bottom: 16px;
-
     background: $background-5;
+
     .d-grid {
         // display: grid;
         // grid-template-columns: 1fr 1fr 1fr;
