--- a/sass/home/_section-4.scss
+++ b/sass/home/_section-4.scss
@@ -1,7 +1,7 @@
 .section-4 {
     // height: 400px;
-    padding: 0;
-    text-align: center;
+    // padding: 0;
+    // text-align: center;
 
     .d-grid {
         // margin-left: -15px;
@@ -11,7 +11,10 @@
 
         // align-items: center; // must remove for image cover
     }
-    .item-2 {
-        position: relative;
-    }
+    // .item-2 {
+    // position: relative;
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: center;
+    // }
 }
