--- a/sass/home/_section-5.scss
+++ b/sass/home/_section-5.scss
@@ -1,34 +1,39 @@
 .section-5 {
-    position: relative;
-    // padding: 0;
-    text-align: center;
-
-    .item-1 {
-        padding: 0;
-    }
-
-    .item-2 {
-        padding: 0;
-        background: $primary-back;
-        //     margin-left: auto;
-        //     margin-right: auto;
-        //     max-width: 450px;
-        //     display: grid;
-        //     grid-template-columns: 1fr;
-        //     grid-template-rows: 4fr auto;
-        //     align-items: center;
-        //     color: $color-5;
-        // opacity: 0.95;
-    }
-
     .float-right {
-        position: relative;
         display: flex;
         justify-content: center;
         flex-direction: column;
         align-items: center;
-        background: green;
+        background: $primary-back;
     }
+
+    .btn:hover {
+        color: #fff !important;
+    }
+
+    // position: relative;
+    // padding: 0;
+    // text-align: center;
+    // background: red;
+
+    // .item-1 {
+    //     padding: 0;
+    // }
+
+    // .item-2 {
+    //     padding: 0;
+    // background: green;
+    // background: $primary-back;
+    //     margin-left: auto;
+    //     margin-right: auto;
+    //     max-width: 450px;
+    //     display: grid;
+    //     grid-template-columns: 1fr;
+    //     grid-template-rows: 4fr auto;
+    //     align-items: center;
+    //     color: $color-5;
+    // opacity: 0.95;
+    // }
 
     // picture {
     //     height: $banner-height-small;
