--- a/sass/_debug.scss
+++ b/sass/_debug.scss
@@ -12,10 +12,10 @@ nav > div > div {
 
 .w3-card,
 .w3-card-2 {
-    box-shadow: 0 4px 10px 0 red, 0 4px 20px 0 red;
+    // box-shadow: 0 4px 10px 0 red, 0 4px 20px 0 red;
 }
 
 .w3-card-4,
 .w3-hover-shadow:hover {
-    box-shadow: 0 4px 10px 0 red, 0 4px 20px 0 red;
+    // box-shadow: 0 4px 10px 0 red, 0 4px 20px 0 red;
 }
