--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,4 +1,5 @@
 .hero {
+    position: relative;
     // max-height: 500px;
     // width: 100%;
 
@@ -17,4 +18,16 @@
     //     height: auto;
     //     width: 100%;
     // }
+}
+
+.header-hero {
+    @extend .header-1;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 72px;
+    font-weight: 900;
+    letter-spacing: 2px;
+    color: $color-5;
 }
