menu item width auto content

--- a/sass/layout/_navbar.scss
+++ b/sass/layout/_navbar.scss
@@ -114,7 +114,7 @@ nav {
         top: 100%;
         left: 0;
         display: none;
-        width: -webkit-max-content;
+        width: max-content;
         text-align: left;
     }
 
