--- a/sass/style.scss
+++ b/sass/style.scss
@@ -29,7 +29,9 @@ $hamburger-layer-color: $color-1;
 @import './odjeli/section-6';
 @import './odjeli/section-7';
 
-@import './debug';
+// Debug
+// @import './debug';
+
 @import './global';
 @import './buttons';
 
