odjeli.html final

--- a/sass/layout/_media.scss
+++ b/sass/layout/_media.scss
@@ -1,6 +1,8 @@
-// @media (min-width: 768px) {
-//     // show hamburger
-// }
+@media (min-width: 576px) {
+}
+
+@media (min-width: 768px) {
+}
 
 @media (min-width: 992px) {
     .navbar {
@@ -13,5 +15,5 @@
     }
 }
 
-// @media (min-width: 1200px) {
-// }
+@media (min-width: 1200px) {
+}
