--- a/sass/style.scss
+++ b/sass/style.scss
@@ -28,6 +28,7 @@ $hamburger-layer-color: $color-1;
 // Odjeli
 @import './odjeli/section-6';
 @import './odjeli/section-7';
+@import './odjeli/media';
 
 // Debug
 // @import './debug';
