--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -21,13 +21,16 @@
 }
 
 .header-hero {
-    @extend .header-1;
+    @extend .header-1-light;
+    text-align: center;
     position: absolute;
     bottom: 0;
+    // top: 50%;
     left: 50%;
-    transform: translateX(-50%);
-    font-size: 72px;
+    // transform: translate(-50%, -50%);
+    transform: translate(-50%);
+    width: 100%;
+    // font-size: 44px;
     font-weight: 900;
-    letter-spacing: 2px;
-    color: $color-5;
+    margin-bottom: 22px;
 }
